new agency use case and base repo added - lets get into remote one

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
     // GSON
     implementation("com.google.code.gson:gson:${rootProject.ext.googleCodeGsonVersion}")
 
+    implementation project(path: ':domain')
+
 }
