--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext {
     androidxLifecycleExtensionsVersion = "2.2.0"
     androidxLifecycleVersion = "2.3.1"
     androidxFragmentKtxVersion = "1.3.5"
-    androidxNavigationVersion = "2.4.2"
+    androidxNavigationVersion = "2.5.0-rc01"
     kotlinxCoroutinesCoreVersion = "1.4.2"
     googleDaggerHiltVersion = "2.38.1"
     squareupRetrofit2Version = "2.9.0"
