--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -31,10 +34,18 @@ android {
 
 dependencies {
 
+    // GLOBAL
     implementation("androidx.core:core-ktx:${rootProject.ext.androidxCoreKtxVersion}")
     implementation("androidx.appcompat:appcompat:${rootProject.ext.androidxAppcompatVersion}")
     implementation("com.google.android.material:material:${rootProject.ext.androidMaterialVersion}")
     implementation("androidx.constraintlayout:constraintlayout:${rootProject.ext.androidxConstraintlayoutVersion}")
+
+    // COROUTINES
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.ext.kotlinxCoroutinesCoreVersion}")
+
+    // HILT
+    implementation("com.google.dagger:hilt-android:${rootProject.ext.googleDaggerHiltVersion}")
+    kapt("com.google.dagger:hilt-android-compiler:${rootProject.ext.googleDaggerHiltVersion}")
 
     implementation project(path: ':data')
 
