--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -47,6 +47,18 @@ dependencies {
     implementation("com.google.dagger:hilt-android:${rootProject.ext.googleDaggerHiltVersion}")
     kapt("com.google.dagger:hilt-android-compiler:${rootProject.ext.googleDaggerHiltVersion}")
 
-    implementation project(path: ':data')
+    // RETROFIT
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.squareupRetrofit2Version}"
+    implementation("com.squareup.retrofit2:retrofit:${rootProject.ext.squareupRetrofit2Version}") {
+        exclude module: 'okhttp'
+    }
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:${rootProject.ext.squareupOkhttp3Version}")
+    implementation("com.squareup.okhttp3:logging-interceptor:${rootProject.ext.squareupOkhttp3Version}")
+    implementation("com.squareup.okhttp3:okhttp:${rootProject.ext.squareupOkhttp3Version}")
+
+    // GSON
+    implementation("com.google.code.gson:gson:${rootProject.ext.googleCodeGsonVersion}")
+
+    api project(path: ':data')
 
 }
