--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     // GSON
     implementation("com.google.code.gson:gson:${rootProject.ext.googleCodeGsonVersion}")
 
+    // Glide
+    implementation("com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}")
+    annotationProcessor("com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}")
+
     implementation project(path: ':domain')
 
 }
