database added, news source entitiy create - next impl SSOT

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     squareupOkhttp3Version = "4.9.3"
     googleCodeGsonVersion = "2.8.6"
     glideVersion = "4.13.0"
+    roomVersion = "2.2.4"
 }
 
 task clean(type: Delete) {
