--- a/data/build.gradle
+++ b/data/build.gradle
@@ -19,4 +19,10 @@ dependencies {
         exclude module: 'okhttp'
     }
 
+    // ROOM
+    implementation "androidx.room:room-runtime:${rootProject.ext.roomVersion}"
+    implementation "androidx.room:room-ktx:${rootProject.ext.roomVersion}"
+    // implementation("androidx.room:room-common:${rootProject.ext.roomVersion}")
+    kapt("androidx.room:room-compiler:${rootProject.ext.roomVersion}")
+
 }
