--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ ext {
     androidMaterialVersion = "1.6.0"
     androidxConstraintlayoutVersion = "2.1.4"
     androidxLifecycleExtensionsVersion = "2.2.0"
-    androidxLifecycleVersion = "2.3.1"
+    androidxLifecycleVersion = "2.4.1"
     androidxFragmentKtxVersion = "1.3.5"
     androidxNavigationVersion = "2.5.0-rc01"
     kotlinxCoroutinesCoreVersion = "1.4.2"
@@ -39,6 +39,8 @@ ext {
     googleCodeGsonVersion = "2.8.6"
     glideVersion = "4.13.0"
     roomVersion = "2.2.4"
+    rxjavaVersion = "1.1.6"
+    rxandroidVersion = "1.2.1"
 }
 
 task clean(type: Delete) {
